--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "##This Node app will allow users to shorten long URLs much like TinyURL.com and bit.ly do.",
   "main": "express_server.js",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.3"
   },
   "devDependencies": {},
