--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "##This Node app will allow users to shorten long URLs much like TinyURL.com and bit.ly do.",
   "main": "express_server.js",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
